--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node" "16.x"
+    "node": "16.x"
   },
   "dependencies": {
     "@tsmx/human-readable": "^1.0.7",
